...
extension HomeSectionX on HomeSection {
  String get label {
    switch (this) {
      case HomeSection.chat:
        return '聊天';
      case HomeSection.contact:
        return '联系人';
      case HomeSection.settings:
        return '设置';
    }
  }
}

...
